--- a/SunsetHills.csproj
+++ b/SunsetHills.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Images\reload.svg" />
     <Content Include="Images\sun.svg" />
     <Content Include="Web.config" />
   </ItemGroup>
